tests/negative/generics/unconstrained_to_constrained.orng
// unconstrained_to_constrained.orng:10:17: error: the type `T` does not implement the trait `Show`
//     needs_show[T](x)
//                ^
// 
trait Show { fn show(self) -> Int }

fn needs_show[T: Show](x: T) -> Int { x.>show() }

fn pass_through[T](x: T) -> Int {
    needs_show[T](x)
}

fn main() -> Int { 4 }